feat: crud for company and for item
